# hex-fpga

./: CMakeLists.txt  GameState.cpp  GameState.h  MCTSSearcher.cpp  MCTSSearcher.h  Makefile  RolloutState.cpp  RolloutState.h  config.h  deploy_on_kria.sh  dut.cpp  dut.h  fpga.txt  gprof_result.txt  hex.cpp  hex.h  host.cpp  host.h  main.cpp  main_sw.cpp  mcts_searcher.cpp  mcts_searcher.h  mcts_tree.cpp  mcts_tree.h  mcts_types.h  rand.cpp  rand.h  run.sh  run.tcl  sweep_puct.sh
artifacts/: run.tcl
kria/: Makefile
mcts.prj/: hls.app
mcts.prj/solution1/: solution1.aps  solution1_data.json
mcts.prj/solution1/.autopilot/: .automg_exit  .autopilot_exit
mcts.prj/solution1/.autopilot/db/: GameState.bc  GameState.cpp.clang.diag.xml  GameState.pp.0.cpp  GameState.pp.0.cpp.clang-tidy.loop-label.diag.yml  GameState.pp.0.cpp.clang.diag.xml  MCTSSearcher.bc  MCTSSearcher.cpp.clang.diag.xml  MCTSSearcher.pp.0.cpp  MCTSSearcher.pp.0.cpp.clang-tidy.loop-label.diag.yml  MCTSSearcher.pp.0.cpp.clang.diag.xml  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  all.directive.json  apatb_dut.cpp  apatb_dut_ir.bc  apatb_dut_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  burst.xml  cmplx.3.000.fe.link.json  (+304 more)
milestone3/hls_output/: hls_output.txt  hls_report.txt
milestone3/hls_src/: hex_hls.h  rollout_hls.cpp  rollout_tb.cpp  run_hls.tcl
milestone3/software_baseline/: baseline_output.txt
src/: hex.cpp  hex.h
(+141 files in other folders)
